--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -4,9 +4,10 @@
   html,body{
     margin:0;
     padding:0;
-    height:100%;font-family: 'Roboto', sans-serif;    
+    width: 100%;
+    font-family: 'Roboto', sans-serif;    
     overflow-x: hidden;
-    background-color: #595959;
+    background-color: #333333;
     scroll-behavior: smooth;
     scroll-snap-type: mandatory;
     scroll-snap-points-y: repeat(100vh);
@@ -25,18 +26,8 @@ a{
     top:0;
     overflow: hidden;
     z-index: 99;
-    background: #595959;
-    color:white
-}
-
-.header{
-    position: fixed;
-    width: 100%;
-    transition: 0.4s ease-in-out;
-    top:0;
-    overflow: hidden;
-    z-index: 99;
-    background: yellow;
+    color:white;
+    background:#333333;
 }
 
 figure{
@@ -60,12 +51,10 @@ figure p{
 }
 
 figure img{
-    margin-left:4em;
     cursor: pointer;
 }
 
 .bannerHead{
-    background-image: url('Banner.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -76,7 +65,8 @@ figure img{
 #videoBG{
     z-index:-1;
     opacity:0.9;
-    width:100%;
+    width:96%;
+    padding:140px 30px;
     filter:brightness(60%);
 }
 
@@ -140,52 +130,6 @@ nav ul li a:hover{
 	overflow: auto;
 }
 
-/* Fade-In Transition*/
-#mainBanner .bannerHeading {
-    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 1s; /* Firefox < 16 */
-    -ms-animation: fadein 1s; /* Internet Explorer */
-    -o-animation: fadein 1s; /* Opera < 12.1 */
-    animation: fadein 1s;
-}
-
-.shopHeading{
-    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 1s; /* Firefox < 16 */
-    -ms-animation: fadein 1s; /* Internet Explorer */
-    -o-animation: fadein 1s; /* Opera < 12.1 */
-    animation: fadein 1s;
-}
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
 @media only screen and (max-width:640px){    
     
     
@@ -228,7 +172,6 @@ nav ul li a:hover{
     .exitButton img{
         width: 15px;
     }
-
 
     .bannerHead{    
         height: 100vh;
@@ -1161,6 +1104,11 @@ nav ul li a:hover{
 
     body{
         text-transform: lowercase;
+        background-color: white;
+    }
+
+    body::-webkit-scrollbar{
+        display: none;
     }
 
     #scrollTop {
@@ -1169,22 +1117,60 @@ nav ul li a:hover{
         bottom: 20px;
         right: 30px;
         z-index: 99;
-        font-size: 18px;
         border: none;
+        width:50px;
+        height: 50px;;
         outline: none;
-        background-color: red;
+        background: rgba(0,0,0,0.9);
         color: white;
+        overflow: hidden;
         cursor: pointer;
-        padding: 15px;
-        border-radius: 4px;
+        padding: 1px;
+        border-radius: 50px;
+      }
+
+      #scrollTop img{
+          width:100%;
       }
       
     #scrollTop:hover {
-        background-color: #555;
+        background-color: #333333;
+        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
       }
 
     nav{
         display: none;
+    }
+
+    .headers{
+        height:7.5em;
+        display:grid;
+        grid-template-rows: 55% 45%;
+    }
+
+    .category{
+        overflow: hidden;
+        background-color: #333333;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        transition: 0.4s ease-in-out;
+        justify-content: center;
+        padding-bottom:25px;
+        height: 100%;
+    }
+
+    .category p{
+        padding:0px 40px;
+        transition: 0.4s ease-in-out;
+        font-size:15px;
+    }
+    
+    .category p:hover{
+        font-weight: bolder;
+        cursor: pointer;
     }
 
     .headers figcaption{
@@ -1192,24 +1178,23 @@ nav ul li a:hover{
     }
 
     figure{
-        margin: 0px;
         display: grid;
-        grid-template-columns: auto auto auto auto auto auto auto auto;
-        height: 4em;
+        grid-template-columns: auto 60px 60px 60px;
+        z-index: 2;
     }
 
     figure a{
-        margin-right: 2em;
+        margin-right: 0.4em;
         font-family: 'Roboto' ,sans-serif;
         letter-spacing: 0.1em;
     }
 
-    figure p{
-        margin-right:20px;
-    }
-
-    figure img{
-        padding:0px;
+    figure #logo{
+        padding:-10px 10px;
+        width:7%;
+        margin-left: 50%;
+        margin-right: auto;
+        margin-top:-25px;
     }
 
     #store{
@@ -1226,6 +1211,7 @@ nav ul li a:hover{
         flex-wrap: nowrap;
         flex-direction: column;
         transition: 0.4s ease-in-out;
+        z-index:3;
     }
 
     #store p{
@@ -1243,24 +1229,6 @@ nav ul li a:hover{
     #store #cross:hover{
         cursor: pointer;
         color:orange;
-    }
-
-    #category{
-        width: 100%;
-        height:0%;
-        overflow: hidden;
-        background-color: black;
-        position: fixed;
-        left:0;
-        top:0;
-        color: white;
-        font-family: 'Roboto', sans-serif;
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        transition: 0.4s ease-in-out;
-        z-index:98;
-        justify-content: center;
     }
 
     .dropDownMenu{
@@ -1292,7 +1260,7 @@ nav ul li a:hover{
         background-color: black;
         width: 100%;
         padding:50px;
-        z-index: 1;
+        z-index: 2;
         margin-left:auto;
         margin-right:auto;
         text-align: center;
@@ -1323,25 +1291,12 @@ nav ul li a:hover{
         display: block;
     }
 
-    #category p{
-        padding:30px;
-        margin-top:60px;
-        transition: 0.4s ease-in-out;
-    }
-
-    #category p:hover{
-        font-family: 'Roboto Condensed',sans-serif;
-        letter-spacing: 0.05em;
-        cursor: pointer;
-    }
-
     .bannerHead{    
-        height: 100vh;
-        width:100vw;
-        background:#595959;
+        height: 750px;
+        width:100%;
         overflow: hidden;
         position: relative;
-        scroll-snap-align: start;
+        background:#333333;
     }
 
     .bannerHeading figcaption{
@@ -1350,76 +1305,77 @@ nav ul li a:hover{
         width:100%;
         height:auto;
         position: absolute;
-        top:50%;
-        left:0;
-        text-align: center;
+        top:80%;
+        left:0px;
         color:white;
         font-family:'Roboto', sans-serif;
         font-weight:700;
     }
 
     .bannerHeading figcaption a button{
-        background:transparent;
+        background:#333333;
         margin:20px;
         font-family: 'Roboto', sans-serif;
-        font-size:0.5em;
+        font-size:0.4em;
         outline: none;
         padding:30px;
         border: none;
-        color: white;
+        color: #cfbb63;
         transition: 0.5s ease;
         display: block;
-        margin-right: auto;
-        margin-left: auto;
-        border: 1px solid white;
+        margin-left: 100px;
+        border: 1px solid #333333;
         box-sizing: border-box;
         font-weight: bold;
+        border-radius:60px;
     }
 
     .bannerHeading figcaption a button:hover{
-        background-color: white;
-        color:#595959;
+        background-color: black;
+        color:#cfbb63;
         cursor: pointer;
     }
     
     .feature{
-        height: 730px;
+        height: 800px;
         width:100%;
-        scroll-snap-align: start;
         color:#cfbb63;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        background-color: rgba(0,0,0,0.5);
-        margin:60px 20px;
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
         text-align: center;
+        background-color: #333333;
     }
 
     .featureProductsHeading{
-        font-size:8em;
+        font-size:5em;
         margin-left: auto;
         margin-right: auto;
-        padding-top: 60px;
-        
+        padding: 260px 0px;
+        text-align: center;
+        font-weight: bolder;
     }
 
     .featureProducts{
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        
+        display: block;
+        overflow: hidden;
+        padding-top:200px
     }
 
-    .featureProducts  img{
-        /* margin-left: auto;
-        margin-right: auto; */
-        width:75%;
-        padding:25px;
+    .featureProducts img{
+        width:65%;
+        padding:5px;
     }
     
+    .bannerSecond{
+        background-image: url('Images/bannerShop.jpg');
+        height:750px;
+        width: 100%;
+    }
+
     .shopBanner{
         width:100%;
-        height:380px;
-        scroll-snap-align: start;
+        background:#333333;
+        height:250px;
         color: #cfbb63;
         text-align: center;
         padding-top:1em;
@@ -1430,22 +1386,91 @@ nav ul li a:hover{
     }
 
     .shopBanner figcaption{
-        font-size:10em;
-        font-weight: normal;
-        letter-spacing: normal;
+        font-size:2em;
+        padding:80px 0px 40px 0px;
     }
 
-    .shopBanner a{
-        font-family: 'Roboto', sans-serif;
-        color:#cfbb63;
-        letter-spacing: 5px;
+    .shopBanner hr{
+        width:60%;  
+        background-color: #cfbb63;
     }
 
-    .shopBanner a:hover{
-        color:orange;
+    .horizontalScroll{
+        background-color: #333333;
+        height: 650px;
+        width:100%;
+        display:flex;
+        flex-wrap: nowrap;
+        overflow-y: hidden;
+        overflow-x: auto;
     }
 
-    .furniture{
+    .horizontalScroll::-webkit-scrollbar{
+        display: none;
+    }
+
+    .horizontalScroll .container{
+        width:25%;
+        position: relative;
+        padding:20px;
+        flex: 0 0 auto;
+    }
+
+    .horizontalScroll .container .imageAvatar{
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: 0.4s ease-in-out;
+        backface-visibility: hidden;
+    }
+
+    .horizontalScroll .container .text{
+        transition: 0.5s ease-in-out;
+        opacity: 0;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+    }
+
+    .horizontalScroll .container .textInfo{
+        background-color: #333333;
+        color: #cfbb63;
+        font-weight: bold;
+        font-size: 32px;
+        padding: 16px 32px;
+        text-align: center;
+        letter-spacing: 1px;
+        transition: 0.4s ease-in-out;
+    }
+
+    .container:hover .imageAvatar{
+        opacity: 0.8;
+        filter: blur(1px) grayscale(100%);
+    }
+
+    .container:hover .text{
+        opacity: 1;
+        cursor: pointer;
+    }
+
+    .container .textInfo:hover{
+        padding:18px 34px;
+        font-size: 34px;
+        box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.9);
+    }
+
+    .bannerThird{
+        height:700px;
+        width:100%;
+        background-image: url('Images/bannerThird.jpg');
+        background-size: cover;
+
+    }
+
+    /* .furniture{
         height:800px;
         width:100%;
         background-color: #595959;
@@ -1538,7 +1563,7 @@ nav ul li a:hover{
         font-size: 8em;
         text-align: center;
         letter-spacing: 5px;
-    }
+    } */
 
     .contact{
         height: 100vh;
