--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -164,8 +164,8 @@
                     {% for item in single_product.variation_set.colors %}
                     <option value="{{item.title }}">{{item.title }}
                     </option>
-                    {% endfor %}
-                </select>
+                {% endfor %}
+                    </select>
                 {% endif %}
 
                 {% if single_product.variation_set.sizes %}
@@ -178,7 +178,7 @@
                 </select>
                 {% endif %}
 
-                <input type='submit' value='Add to cart'
+                <input type='submit' value='Add to cart'/>
                 <a href="{% url 'add_to_cart' single_product.slug %}?qty=1" class="cart-btn"></a>
 
 
