--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 
-  body{
+  html,body{
     margin:0;
     padding:0;
     width: 100%;
@@ -13,6 +13,34 @@
     scroll-snap-points-y: repeat(100vh);
     scroll-snap-type: y mandatory;
 }
+
+
+#scrollTop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    width:50px;
+    height: 50px;;
+    outline: none;
+    background: rgba(0,0,0,0.9);
+    color: white;
+    overflow: hidden;
+    cursor: pointer;
+    padding: 1px;
+    border-radius: 50px;
+  }
+
+  #scrollTop img{
+      width:100%;
+  }
+
+#scrollTop:hover {
+    background-color: #333333;
+    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
+  }
 
 a{
     text-decoration: none;
@@ -1104,39 +1132,11 @@ nav ul li a:hover{
 
     body{
         text-transform: lowercase;
-        background-color: white;
     }
 
     body::-webkit-scrollbar{
         display: none;
     }
-
-    #scrollTop {
-        display: none;
-        position: fixed;
-        bottom: 20px;
-        right: 30px;
-        z-index: 99;
-        border: none;
-        width:50px;
-        height: 50px;;
-        outline: none;
-        background: rgba(0,0,0,0.9);
-        color: white;
-        overflow: hidden;
-        cursor: pointer;
-        padding: 1px;
-        border-radius: 50px;
-      }
-
-      #scrollTop img{
-          width:100%;
-      }
-
-    #scrollTop:hover {
-        background-color: #333333;
-        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
-      }
 
     nav{
         display: none;
@@ -1179,7 +1179,7 @@ nav ul li a:hover{
 
     figure{
         display: grid;
-        grid-template-columns: auto 60px 60px 60px;
+        grid-template-columns: 60px 60px auto 60px 60px 60px;
         z-index: 2;
     }
 
@@ -1192,7 +1192,7 @@ nav ul li a:hover{
     figure #logo{
         padding:-10px 10px;
         width:7%;
-        margin-left: 50%;
+        margin-left: 48%;
         margin-right: auto;
         margin-top:-25px;
     }
@@ -1367,9 +1367,10 @@ nav ul li a:hover{
     }
     
     .bannerSecond{
-        background-image: url('Images/bannerShop.jpg');
+        background-image: url("Images/bannerSec.jpg");
         height:750px;
         width: 100%;
+        overflow:hidden;
     }
 
     .shopBanner{
