--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -14,36 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
 </head>
-<style>
-
-    body{
-        height:100%;
-    }
-    #scrollTop {
-        display: none;
-        position: fixed;
-        bottom: 20px;
-        right: 30px;
-        z-index: 99;
-        font-size: 18px;
-        border: none;
-        outline: none;
-        background-color: red;
-        color: white;
-        cursor: pointer;
-        padding: 15px;
-        border-radius: 4px;
-    }
-
-    #scrollTop:hover {
-        background-color: blue;
-    }
-
-</style>
 <body>
     
     <div class = "headers" id="headerOnScroll">
         <figure id="figureOnScroll">
+
+            <a href="#"> <p> <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}"> </p></a>
+            <a href="#"> <p> <img src="{% static 'Raul/Icons/Icons_Small/location.png' %}"> </p></a>
 
             <img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="6%"  onclick="openStore()" id="logo">
 
@@ -156,6 +133,7 @@
     </div>
 
     <div class ="bannerSecond">
+        
     </div>
 
     <div class ="shopBanner">
